define functions to compute features for the model + test the result of the functions on the model

--- a/notebooks/detection_NN.ipynb
+++ b/notebooks/detection_NN.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 14,
    "id": "b93401cb-b9a1-4ff6-a944-c1007678fa04",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "7503fd9d-24da-4722-b2c4-ae1c6e481021",
    "metadata": {},
    "outputs": [
@@ -254,7 +254,7 @@
        "[5 rows x 89 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,13 +282,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "a750b965-6de1-46be-91b1-8286d71e53bb",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -306,7 +302,7 @@
        "Name: domain_age, dtype: float64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "e15bb271-1676-4c24-9f85-45c311438130",
    "metadata": {},
    "outputs": [],
@@ -346,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "f1235539-0dc5-4980-ab26-1a35c6d6dc83",
    "metadata": {},
    "outputs": [],
@@ -365,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "371d73e5-5121-4411-84cd-d0f46d11639a",
    "metadata": {},
    "outputs": [],
@@ -384,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "e9f4fe8a-0a64-4035-9a22-ff4d0b6b02e4",
    "metadata": {},
    "outputs": [],
@@ -403,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "eb2d7677-605c-46a8-9d36-9e7b36d0eeeb",
    "metadata": {},
    "outputs": [],
@@ -423,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 22,
    "id": "a37cabc2-082e-49c3-8b68-2ce372729137",
    "metadata": {},
    "outputs": [],
@@ -453,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "id": "7b1f5a7c-cf95-4b14-840d-8ca16a1fbd5c",
    "metadata": {},
    "outputs": [
@@ -463,7 +459,7 @@
        "((6715, 79), (6715,))"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,9 +470,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "f3da8835-280d-4f3f-967f-698819aca3f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['length_url', 'length_hostname', 'ip', 'nb_dots', 'nb_hyphens', 'nb_at',\n",
+       "       'nb_qm', 'nb_and', 'nb_or', 'nb_eq', 'nb_underscore', 'nb_tilde',\n",
+       "       'nb_percent', 'nb_slash', 'nb_star', 'nb_colon', 'nb_comma',\n",
+       "       'nb_semicolumn', 'nb_dollar', 'nb_space', 'nb_www', 'nb_com',\n",
+       "       'nb_dslash', 'http_in_path', 'https_token', 'ratio_digits_url',\n",
+       "       'ratio_digits_host', 'punycode', 'port', 'tld_in_path',\n",
+       "       'tld_in_subdomain', 'abnormal_subdomain', 'nb_subdomains',\n",
+       "       'prefix_suffix', 'random_domain', 'shortening_service',\n",
+       "       'path_extension', 'nb_redirection', 'nb_external_redirection',\n",
+       "       'length_words_raw', 'char_repeat', 'shortest_words_raw',\n",
+       "       'shortest_word_host', 'shortest_word_path', 'longest_words_raw',\n",
+       "       'longest_word_host', 'longest_word_path', 'avg_words_raw',\n",
+       "       'avg_word_host', 'avg_word_path', 'suspecious_tld', 'nb_hyperlinks',\n",
+       "       'ratio_intHyperlinks', 'ratio_extHyperlinks', 'ratio_nullHyperlinks',\n",
+       "       'nb_extCSS', 'ratio_intRedirection', 'ratio_extRedirection',\n",
+       "       'ratio_intErrors', 'ratio_extErrors', 'login_form', 'external_favicon',\n",
+       "       'links_in_tags', 'submit_email', 'ratio_intMedia', 'ratio_extMedia',\n",
+       "       'sfh', 'iframe', 'popup_window', 'safe_anchor', 'onmouseover',\n",
+       "       'right_clic', 'empty_title', 'domain_in_title', 'domain_with_copyright',\n",
+       "       'whois_registered_domain', 'domain_registration_length', 'domain_age',\n",
+       "       'google_index'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 73,
    "id": "bf3d24fd-70ff-4cdd-abe2-b99c69c55f7d",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -711,6 +753,29 @@
    "source": [
     "test_accuracy = model.evaluate(X_test, y_test)[1]\n",
     "test_accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "ae11410a-2388-4d9c-a753-4decfc129ea7",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [13], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m prob \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[38;5;241m.\u001b[39mpredict(X_test)\n\u001b[1;32m      2\u001b[0m prob\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'model' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "prob = model.predict(X_test)\n",
+    "prob"
    ]
   },
   {
